test/error/syntax/mismatch_paren.kat
func main(argc: int, argv: str) => int {
  let i: int = (1 + 2 * 3;
}
